# speed-comparison

./: .coderabbit.yaml  .gitignore  CLAUDE.md  Dockerfile  Earthfile  LICENSE  Makefile  README.md  _config.yml  analyze.py  build-output.txt  ci.xsh  combine-results.py  comparison.py  comparison.sh  download_icons.py  earthly-config.yml  index.md  leibniz.c  leibniz.cr  leibniz.go  leibniz.jl  leibniz.js  leibniz.lua  leibniz.nim  leibniz.php  leibniz.py  leibniz.rb  leibniz.rs  plot.r  publish.py  pyproject.toml  requirements.txt
.buildkite/: pipeline.yml
.github/: 2018-03-02_01:14.csv  2022-10-02_22:18.csv  data_v1.0.csv  data_v1.1.csv  data_v1.2.csv  data_v1.4.csv
assets/: latest
dagger-poc/: APPROACH.md  README.md  benchmark.py  build_images.py  check_images.py  check_versions.py  detect_changes.py  justfile  languages.py  pyproject.toml  scmeta.py  test_languages.py  test_scmeta.py
dagger-poc/fly/: Dockerfile  entrypoint.sh  fly.toml
docs/: buildkite-hosted.md  index.html
pages/: 2022-10-15T164557.md  2022-10-15T185127.md  2022-10-15T193648.md  2022-10-15T213004.md  2022-10-15T213108.md  2022-10-15T214923.md  2022-10-15T223909.md  2022-10-15T234922.md  2022-10-16T010941.md  2022-10-16T012405.md  2022-10-16T195558.md  2022-10-16T210149.md  2022-10-16T223311.md  2022-10-17T071516.md  2022-10-17T085023.md  2022-10-17T104320.md  2022-10-17T105611.md  2022-10-17T123216.md  2022-10-17T222109.md  2022-10-17T225759.md  2022-10-18T104721.md  2022-10-18T104830.md  2022-10-18T181851.md  2022-10-18T184806.md  2022-10-19T225406.md  2022-10-19T230508.md  (+30 more)
(+240 files in other folders)
